<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.LoginFragment">

    <data>

        <variable
            name="userDetails"
            type="com.example.fundallassessment.domain.models.User" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:text="@string/cancel"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            tools:src="@drawable/user"
            android:setUserImage="@{userDetails.userProfileImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_2"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/we_miss_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/we_miss_you, userDetails.firstName)}"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

        <TextView
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{userDetails.email}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/we_miss_you" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:backgroundTint="@color/colorPrimary"
            android:drawablePadding="@dimen/margin_10"
            android:hint="@string/enter_your_password"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ImageView
            android:id="@+id/password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="@dimen/margin_10"
            android:src="@drawable/password_icon"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <android.widget.Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:text="@string/log_in"
            android:enabled="@{password.text.length() > 2}"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

            <TextView
                android:id="@+id/already_a_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here"
                app:layout_constraintBottom_toBottomOf="@+id/register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/register" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:paddingTop="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_10"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/already_a_member"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>