<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.fragment.HomeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.fundallassessment.presentation.viewModel.FundAllExpensesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/home_background_color"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangle_1"
                android:layout_width="0dp"
                android:layout_height="275dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_bottom_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logout_button"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:src="@drawable/logout"
                android:layout_marginStart="@dimen/margin_10"
                app:layout_constraintBottom_toBottomOf="@+id/user_profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fundall_wallet" />

            <TextView
                android:id="@+id/fundall_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fundall_e_wallet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_23sp"
                app:layout_constraintBottom_toBottomOf="@+id/user_profile_image"
                app:layout_constraintEnd_toStartOf="@+id/user_profile_image"
                app:layout_constraintStart_toEndOf="@+id/logout_button"
                app:layout_constraintTop_toTopOf="@+id/user_profile_image" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                tools:src="@drawable/user"
                android:setProfileImage="@{viewModel.userDetailsResponse}"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/fundall_wallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/_12_634_37"
                android:setBalance="@{viewModel.userDetailsResponse}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/user_profile_image"
                app:layout_constraintStart_toStartOf="@+id/logout_button"
                app:layout_constraintTop_toTopOf="@+id/guideline_1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                android:textColor="@color/text_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/income"
                android:textColor="@color/text_hint_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fundall_wallet_balance" />

            <TextView
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/_12_634_37"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:setIncome="@{viewModel.userDetailsResponse}"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                tools:text="@string/_12_634_37"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                android:setSpent="@{viewModel.userDetailsResponse}"
                app:layout_constraintBottom_toBottomOf="@+id/income"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/request"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/request_card"
                android:textColor="@color/dashboard_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/analytics"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analytics"
                android:textColor="@color/dashboard_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/second_rec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>